--- a/action.yml
+++ b/action.yml
@@ -68,35 +68,30 @@ runs:
         chmod +x ${{ inputs.downloads-path }}/blazium-cli
         ls -l ${{ inputs.downloads-path }}
 
-    - name: Move to bin path
-      shell: bash
-      run: |
-        echo "$(pwd)/${{ inputs.downloads-path }}" >> $GITHUB_PATH
-
     - name: Verify Blazium CLI Installation
       shell: bash
       run: |
-        blazium-cli --version
+        ${{ inputs.downloads-path }}/blazium-cli --version
 
     - name: Blazium CLI Editor
       shell: bash
       run: |
         mkdir -p ${{ inputs.downloads-path }}
-        blazium-cli --get-version ${{ inputs.version }} --arch ${{ inputs.arch }} --download --editor --platform ${{ inputs.platform }} ${{ inputs.downloads-path }}
+        ${{ inputs.downloads-path }}/blazium-cli --get-version ${{ inputs.version }} --arch ${{ inputs.arch }} --download --editor --platform ${{ inputs.platform }} ${{ inputs.bin-path }}
       if: ${{ inputs.download_editor == 'true' }}
     
     - name: Extract the blazium-editor file from zip
       shell: bash
       run: |
         # Unzip 1st time
-        file=$(ls ${{ inputs.downloads-path }})
-        unzip ${{ inputs.downloads-path }}/$file -d ${{ inputs.downloads-path }}
-        rm ${{ inputs.downloads-path }}/$file
+        file=$(ls ${{ inputs.bin-path }})
+        unzip ${{ inputs.bin-path }}/$file -d ${{ inputs.bin-path }}
+        rm ${{ inputs.bin-path }}/$file
 
         # Unzip 2nd time
-        file=$(ls ${{ inputs.downloads-path }})
-        unzip ${{ inputs.downloads-path }}/$file -d ${{ inputs.bin-path }}
-        rm ${{ inputs.downloads-path }}/$file
+        file=$(ls ${{ inputs.bin-path }})
+        unzip ${{ inputs.bin-path }}/$file -d ${{ inputs.bin-path }}
+        rm ${{ inputs.bin-path }}/$file
         # Set permissions
         chmod +x ${{ inputs.bin-path }}/$file
         # Save file into env file
