--- a/action.yml
+++ b/action.yml
@@ -92,6 +92,11 @@ runs:
         file=$(ls ${{ inputs.bin-path }})
         unzip ${{ inputs.bin-path }}/$file -d ${{ inputs.bin-path }}
         rm ${{ inputs.bin-path }}/$file
+        
+        # Set file path
+        file=$(ls ${{ inputs.bin-path }})
+        # Print executable
+        echo "Executable: ${{ inputs.bin-path }}/$file"
         # Set permissions
         chmod +x ${{ inputs.bin-path }}/$file
         # Save file into env file
