--- a/action.yml
+++ b/action.yml
@@ -77,6 +77,7 @@ runs:
         ${{ inputs.downloads-path }}/blazium-cli --version
 
     - name: Blazium CLI Editor
+      if: ${{ inputs.download_editor == 'true' }}
       shell: bash
       run: |
         if [ "$RUNNER_OS" == "Linux" ]; then
@@ -113,19 +114,15 @@ runs:
             arch=${{ inputs.arch }}
           fi
         fi
-        if [ "${{ inputs.mono }}" == "true" ]; then
+        if [ "${{ inputs.download_mono }}" == "true" ]; then
           mono=" --mono"
         else
           mono=""
         fi
         mkdir -p ${{ inputs.bin-path }}
         ${{ inputs.downloads-path }}/blazium-cli --get-version ${{ inputs.version }} --arch ${{ inputs.arch }} --download --editor --platform $platform ${{ inputs.bin-path }} $mono
-      if: ${{ inputs.download_editor == 'true' }}
+      
     
-    - name: Extract the blazium-editor file from zip
-      shell: bash
-      if: ${{ inputs.download_editor == 'true' }}
-      run: |
         # Unzip 1st time
         file=$(ls ${{ inputs.bin-path }})
         unzip ${{ inputs.bin-path }}/$file -d ${{ inputs.bin-path }}
@@ -136,33 +133,24 @@ runs:
         unzip ${{ inputs.bin-path }}/$file -d ${{ inputs.bin-path }}
         rm ${{ inputs.bin-path }}/$file
         
-    - name: Set Blazium Editor Path
-      shell: bash
-      if: ${{ inputs.download_editor == 'true' && inputs.platform == 'macos' }}
-      run: |
-        echo "BLAZIUM_EDITOR=${{ inputs.bin-path }}/Blazium.app/Contents/MacOS/Blazium" >> $GITHUB_ENV
+        if [ "$platform" == "macos" ]; then
+          echo "BLAZIUM_EDITOR=${{ inputs.bin-path }}/Blazium.app/Contents/MacOS/Blazium" >> $GITHUB_ENV
+        elif [ "$platform" == "linux" ]; then
+          file=$(ls ${{ inputs.bin-path }})
+          chmod +x ${{ inputs.bin-path }}/$file
+          echo "BLAZIUM_EDITOR=${{ inputs.bin-path }}/$file" >> $GITHUB_ENV
+        else
+          # Find the first subdirectory in the bin path
+          subdir=$(find "${{ inputs.bin-path }}" -type d -mindepth 1 -maxdepth 1)
+          
+          # Find the .console.exe file within the subdirectory
+          file=$(find "$subdir" -type f -name '*.console.exe' | head -n 1)
+          
+          # Set the environment variable with Windows-style path separators
+          win_path=$(echo "$file" | sed 's/\//\\\\/g')
+          echo "BLAZIUM_EDITOR=$win_path" >> $GITHUB_ENV
+        fi
 
-    - name: Set Blazium Editor Path
-      shell: bash
-      if: ${{ inputs.download_editor == 'true' && inputs.platform == 'linux' }}
-      run: |
-        file=$(ls ${{ inputs.bin-path }})
-        chmod +x ${{ inputs.bin-path }}/$file
-        echo "BLAZIUM_EDITOR=${{ inputs.bin-path }}/$file" >> $GITHUB_ENV
-    
-    - name: Set Blazium Editor Path
-      shell: bash
-      if: ${{ inputs.download_editor == 'true' && inputs.platform == 'windows' }}
-      run: |
-        # Find the first subdirectory in the bin path
-        subdir=$(find "${{ inputs.bin-path }}" -type d -mindepth 1 -maxdepth 1)
-        
-        # Find the .console.exe file within the subdirectory
-        file=$(find "$subdir" -type f -name '*.console.exe' | head -n 1)
-        
-        # Set the environment variable with Windows-style path separators
-        win_path=$(echo "$file" | sed 's/\//\\\\/g')
-        echo "BLAZIUM_EDITOR=$win_path" >> $GITHUB_ENV
 
     - name: Verify Blazium CLI Editor Installation
       shell: bash
