--- a/action.yml
+++ b/action.yml
@@ -78,10 +78,9 @@ runs:
         fi
         mkdir -p ${{ inputs.downloads-path }}/cli
         curl -L -o ${{ inputs.downloads-path }}/cli/blazium-cli https://cdn.blazium.app/cli/$os/${{ inputs.cli-version }}/blazium-cli
-        cd cli
-        file=$(ls ${{ inputs.downloads-path }})
-        chmod +x $file
+        file=$(ls ${{ inputs.downloads-path }}/cli)
         BLAZIUM_CLI=${{ inputs.downloads-path }}/$file
+        chmod +x $BLAZIUM_CLI
         echo "BLAZIUM_CLI=$BLAZIUM_CLI" >> $GITHUB_ENV
 
     - name: Verify Blazium CLI Installation
@@ -148,8 +147,6 @@ runs:
           mkdir -p ${{ inputs.bin-path }}/editor
           ${{ env.BLAZIUM_CLI }} --get-version ${{ inputs.version }} --arch $arch --download --editor --platform $platform$mono ${{ inputs.bin-path }}/editor
           
-          cd editor
-
           # Unzip 1st time
           file=$(ls ${{ inputs.bin-path }}/editor)
           unzip ${{ inputs.bin-path }}/editor/$file -d ${{ inputs.bin-path }}/editor
@@ -250,7 +247,6 @@ runs:
         else
           echo "Using cached template"
         fi
-        cd ${{ inputs.bin-path }}/templates
         file=$(ls ${{ inputs.bin-path }}/templates)
         echo "BLAZIUM_TEMPLATE=${{ inputs.bin-path }}/templates/$file" >> $GITHUB_ENV
 
