--- a/action.yml
+++ b/action.yml
@@ -76,7 +76,10 @@ runs:
           os="macos"
         fi
         mkdir -p ${{ inputs.downloads-path }}/cli
-        if [ "${{ steps.cache-blazium-cli.outputs.cache-hit }}" != "true" ]; then
+        # If os is windows, use .exe
+        if [ "$os" == "windows" ]; then
+          curl -L -o ${{ inputs.downloads-path }}/cli/blazium-cli.exe https://cdn.blazium.app/cli/$os/${{ inputs.cli-version }}/blazium-cli.exe
+        elif [ "${{ steps.cache-blazium-cli.outputs.cache-hit }}" != "true" ]; then
           curl -L -o ${{ inputs.downloads-path }}/cli/blazium-cli https://cdn.blazium.app/cli/$os/${{ inputs.cli-version }}/blazium-cli
         else
           echo "Using cached Blazium CLI"
