--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
           platform: linux
           }, {
           name: macos-latest,
-          platform: darwin
+          platform: macos
           }, { 
           name: windows-latest,
           platform: windows
