--- a/action.yml
+++ b/action.yml
@@ -80,7 +80,7 @@ runs:
           # If os is windows, use .exe
           if [ "$os" == "windows" ]; then
             curl -L -o ${{ inputs.downloads-path }}/cli/blazium-cli.exe https://cdn.blazium.app/cli/$os/${{ inputs.cli-version }}/blazium-cli.exe
-          else [ "${{ steps.cache-blazium-cli.outputs.cache-hit }}" != "true" ]; then
+          else
             curl -L -o ${{ inputs.downloads-path }}/cli/blazium-cli https://cdn.blazium.app/cli/$os/${{ inputs.cli-version }}/blazium-cli
           fi
         else
